--- a/app/project.json
+++ b/app/project.json
@@ -1,44 +1,18 @@
 [
   {
-    "title": "Mon Projet 1",
-    "description": "Description de mon premier projet",
-    "slug": "mon-projet-1",
-    "date": "2024-04-23",
-    "published": true
-  },
-  {
-    "title": "Mon Projet 2",
-    "description": "Description de mon deuxième projet",
-    "slug": "mon-projet-2",
-    "date": "2024-04-24",
-    "published": true
-  },
-  {
-    "title": "Mon Projet 3",
-    "description": "Description de mon troisième projet",
-    "slug": "mon-projet-3",
-    "date": "2024-04-25",
-    "published": false
-  },
-  {
-    "title": "Mon Projet 4",
-    "description": "Description de mon premier projet",
-    "slug": "mon-projet-4",
-    "date": "2024-04-23",
-    "published": true
-  },
-  {
-    "title": "Mon Projet 2",
-    "description": "Description de mon deuxième projet",
-    "slug": "mon-projet-5",
-    "date": "2024-04-24",
-    "published": true
-  },
-  {
-    "title": "Mon Projet 3",
-    "description": "Description de mon troisième projet",
-    "slug": "mon-projet-6",
-    "date": "2024-04-25",
-    "published": false
+    "_id": "project1",
+    "_raw": {},
+    "type": "Project",
+    "published": true,
+    "title": "Sample Project",
+    "description": "This is a sample project description.",
+    "date": "2024-04-23T12:00:00Z",
+    "url": "https://example.com",
+    "repository": "https://github.com/example/sample-project",
+    "body": {
+      "code": "Your MDX code here"
+    },
+    "path": "/projects/sample-project",
+    "slug": "sample-project"
   }
 ]
