:rocket: change github repository

--- a/app/projects/project.json
+++ b/app/projects/project.json
@@ -76,7 +76,7 @@
     "title": "Krealabs Website",
     "description": "The KreaLabs project is a website developed by a freelance team based in Rouen, France. Specializing in web design, they provide customized and innovative solutions leveraging their expertise in both front-end and back-end development. Built using Astro.build, the site showcases their diverse portfolio, customizable templates, and transparent pricing plans, alongside insights shared through a dedicated blog focusing on web design trends and best practices.",
     "date": "2024-05-05T00:00:00.000Z",
-    "repository": "https://github.com/makcimerrr/social-network",
+    "repository": "https://github.com/makcimerrr/krealabs",
     "_id": "projects/krealabs.mdx",
     "_raw": {
       "sourceFilePath": "projects/krealabs.mdx",
