--- a/app/projects/project.json
+++ b/app/projects/project.json
@@ -112,6 +112,15 @@
     "title": "Filler",
     "description": "Filler is an algorithmic game where two players fight on a map. The goal is to collect as many points as possible by placing pieces on the map. The game ends when a piece can no longer be placed on the map.",
     "date": "2024-11-22",
+    "repository": "https://github.com/makcimerrr/filler",
+    "_id": "projects/filler.mdx",
+    "_raw": {
+      "sourceFilePath": "projects/filler.mdx",
+      "sourceFileName": "filler.mdx",
+      "sourceFileDir": "projects",
+      "contentType": "mdx",
+      "flattenedPath": "projects/filler"
+    },
     "type": "Project",
     "path": "/projects/filler",
     "slug": "filler"
